第13章翻译完毕

--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -383,7 +383,7 @@
   - [12.10Summary: Natural creativity cycle](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Natural_creativity_cycle)
   - 摘要：自然创造力周期
 - [13Brain evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Brain_evolution)
-- 脑进化
+- 大脑进化
   - [13.1Employing evolution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Employing_evolution)
   - 利用进化
   - [13.2Genius of neural computation](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Genius_of_neural_computation)
@@ -491,7 +491,7 @@
   - [17.7Summary: Daycare misery](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Daycare_misery)
   - 摘要：幼儿园的苦难
 - [18Stress resilience](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stress_resilience)
-- 压力恢复力
+- 压力适应力
   - [18.1Good stress and bad stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Good_stress_and_bad_stress)
   - 良性压力和恶性压力
   - [18.2Global loss of IQ](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Global_loss_of_IQ)
@@ -503,7 +503,7 @@
   - [18.5Preparation for adulthood](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Preparation_for_adulthood)
   - 成年的准备
     - [18.5.1Stress resilience training](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stress_resilience_training)
-    - 压力恢复力训练
+    - 压力恢复力练习
     - [18.5.2Discipline training](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Discipline_training)
     - 自律训练
   - [18.6Homeschooler's sleep](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Homeschooler.27s_sleep)
@@ -511,9 +511,9 @@
   - [18.7Optimum stress exposure](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Optimum_stress_exposure)
   - 最佳压力接触
   - [18.8Stress resilience](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Stress_resilience_2)
-  - 压力恢复力
+  - 压力适应力
   - [18.9Summary: Stress resilience](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Stress_resilience)
-  - 摘要：压力恢复力
+  - 摘要：压力适应力
 - [19Childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Childhood_passions)
 - 童年激情
   - [19.1Childhood passions](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Childhood_passions_2)
