--- a/I would never send my kids to school我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/06.Learn drive and reward学习内驱力和奖励.md
@@ -766,7 +766,7 @@ When I hypothesized on the emergence of powerful [learn drive](https://supermemo
 
 **Desirable difficulty** is a concept that might be an excuse for tolerating the displeasure of learning at school. Here I explain why this excuse is unjust and dangerous.
 
-**值得的困难**是一个概念，可能成为一个容忍在学校的不愉快学习的借口。我在这里解释为什么这个借口是不公正和危险的。
+**值得的困难**是一个概念，可能成为一个容忍在学校学习的不悦的借口。我在这里解释为什么这个借口是不公正和危险的。
 
 Robert Bjork might be the best expert on learning theory. If he tells you that difficulties can be desirable in learning, he is right and it does not stand in contradiction to the fact that good learning is always pleasurable. Desirable difficulty is a conglomerate of concepts in which obstacles in learning lead to better learning. Let's tackle those one by one in the light of the pleasure of learning:
 
