--- a/I would never send my kids to school我再也不会把孩子送去学校/09.Toxic memory毒性记忆.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/09.Toxic memory毒性记忆.md
@@ -1,5 +1,7 @@
 # 9 Toxic memory
 
+# 毒性记忆
+
 A decline in the [learn drive](https://supermemo.guru/wiki/Learn_drive) as a result of bad learning may come from a lesser buildup of memories, and faster [forgetting](https://supermemo.guru/wiki/Forgetting). However, formation of parasitic and toxic memories may also be responsible for a gradual increase in the dislike of school and learning.
 
 ## 9.1 Hate of school
