--- a/I would never send my kids to school我再也不会把孩子送去学校/12.Natural creativity cycle自然创造力周期.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/12.Natural creativity cycle自然创造力周期.md
@@ -1,5 +1,7 @@
 # 12 Natural creativity cycle
 
+# 自然创造力周期
+
 Natural creativity cycle is a repetitive sequence of changes in knowledge stored in memory. Those changes are induced by learning, creative thinking, and [memory optimization in sleep](https://supermemo.guru/wiki/Memory_optimization_in_sleep). Those changes form a cycle rooted in the [circadian rhytm](https://supermemo.guru/wiki/Circadian_cycle).
 
 ## 12.1 Creativity formula
