--- a/I would never send my kids to school我再也不会把孩子送去学校/13.Brain evolution大脑进化.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/13.Brain evolution大脑进化.md
@@ -1,64 +1,128 @@
 # 13 Brain evolution
 
+# 大脑进化
+
 ## 13.1 Employing evolution
+
+## 利用进化
 
 Some smart people believe that evolution will help improve the brain to tolerate some of the challenges of the modern world. They are right. The evolution is an on-going process. However, the same smart people may tend to believe that pushing the brain to its limits has some evolutionary value. This thinking is extremely dangerous as it may justify the displeasure of learning in contradiction to the [fundamental law of learning](https://supermemo.guru/wiki/Fundamental_law_of_learning).
 
+一些聪明人相信，进化将有助于改进大脑，使其能够承受现代世界的一些挑战。他们是对的。进化是一个持续的过程。然而，这些聪明人可能倾向于相信，将大脑推向极限具有一定的进化价值。这种想法是极其危险的，因为它可能使与[学习基本规律](https://supermemo.guru/wiki/Fundamental_law_of_learning)相矛盾的不悦合理化。
+
 The claim is that we need to adapt to harder schooling because there are things that our grandmothers could never do. However, school stress is more likely to come from calculus that have been done since the time of Newton, i.e. long before granny was born. At the same time, our grandmothers never used iPhone, which kids love and schools often ban or place in cell hotels.
+
+有人说，我们需要适应更艰苦的教育，因为有些事情是我们的祖母永远做不到的。然而，学校的压力更有可能来自于自牛顿时代就开始做的微积分，也就是说，远在祖母出生之前。与此同时，我们的祖母从未使用过 iPhone，而孩子们喜欢 iPhone，并且学校经常禁止携带或把它们放在手机收纳盒里。
 
 The idea of pushing the limits leads parents and educators to believe that exposing kids to hardships of life early will result in building [resilience](https://supermemo.guru/wiki/Stress_resilience). Developmental acceleration that comes from hardship provide further feedback to the illusion that it benefits the brain. This is how the whole system of [harmful ideas](https://supermemo.guru/wiki/Baby_management) come to play: cram schools, alarm clocks, jam-packed educational and extracurricular schedules, accelerated curriculum, boot camps and brain boot camps, and more.
 
+挑战极限的想法使父母和教育工作者相信，让孩子早早地接触生活的艰辛将有助于培养他们的[适应力](https://supermemo.guru/wiki/Stress_resilience)。来自艰难困苦的发展加速，为「艰苦困苦有益于大脑」的错觉提供了进一步的反馈。这就是整个[有害思想](https://supermemo.guru/wiki/Baby_management)体系发挥作用的方式：补习班、闹钟、拥挤的教育和课外计划、速成课程、新兵训练营和大脑训练营等等。
+
 This is all based on poor understanding of evolution.
+
+这都是基于对进化理解的不足。
 
 For starters, evolution is a snail-slow process that takes generations to produce changes that are hard to notice. Why rely on evolution, when we can get results on a few orders of magnitude better by taking the opposite strategy: relieving the pressures. Take an average school-age kid, let it get some sleep, let it relax, activate the [learn drive](https://supermemo.guru/wiki/Learn_drive), let him follow the [natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle), and in a few months you may get 500% gain in brain power. Don't Google to verify the number. 500% is just my wild shot. I look at unhappy gaunt kids around and I know that what they crave for is their best medicine: freedom, incl. [freedom to learn](https://supermemo.guru/wiki/Why_kids_hate_school%3F).
 
+首先，进化是一个缓慢的过程，需要几代人的时间才能产生难以察觉的变化。当我们采取相反的策略：缓解压力，就能在几个数量级上取得更好的结果时，为什么还要依赖进化呢？以一个普通学龄儿童为例，让他得到一些睡眠，让他放松，激活[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，让他跟随[自然创造力周期](https://supermemo.guru/wiki/Natural_creativity_cycle)，几个月后，他的脑力可能会提高 500%。不要用谷歌来验证这个数字。500%只是我的大胆猜测。我看着周围那些郁郁寡欢、骨瘦如柴的孩子，我知道他们渴望的是最好的良药：自由，包括[学习的自由](https://supermemo.guru/wiki/Why_kids_hate_school%3F)。
+
 ## 13.2 Genius of neural computation
+
+## 神经计算的天赋
 
 There is a dangerous point of ignorance behind the idea that pushing the limits is good for the evolution of the brain. At the root of the error in judgement is the unawareness of evolutionary marvels such as the [learn drive](https://supermemo.guru/wiki/Learn_drive), [memory optimization in sleep](https://supermemo.guru/wiki/Memory_optimization_in_sleep), [spaced repetition](https://supermemo.guru/wiki/Spaced_repetition), and more. These are genius inventions of neural computing that cannot be improved using the concept of pushing the limits of brainwork.
 
+在认为突破极限有利于大脑进化的观点背后，存在着无知的危险。判断错误的根源在于对进化奇迹的忽视，比如[学习内驱力](https://supermemo.guru/wiki/Learn_drive)、[睡眠中的记忆优化](https://supermemo.guru/wiki/Memory_optimization_in_sleep)、[间隔重复](https://supermemo.guru/wiki/Spaced_repetition)等等。这些都是神经计算的天才发明，不能用挑战脑力劳动极限的概念加以改进。
+
 Amazingly, many scientists in service of the army, education system, or the industry already work on weapons of mass brain destruction. Millions of dollars keep getting invested in harmful ideas such as eliminating sleep, eliminating forgetting, eliminating creative distraction, manipulating sleep stages, etc.
+
+令人惊讶的是，许多为军队、教育系统或工业服务的科学家已经在研究大规模杀伤性武器。数百万美元不断地投入到有害的想法中，比如消除睡眠、消除遗忘、消除创造性分心、控制睡眠阶段等等。
 
 This would actually result in evolution in reverse! If we eliminate sleep, we kill intelligence. If we eliminate sleepiness, we kill memory optimization. If we eliminate the sense of boredom, we accept indiscriminate learning. If we eliminate forgetting, we kill abstract thinking, and so on.
 
+这实际上会导致相反的进化！如果我们不睡觉，我们就扼杀了智力。如果我们消除了睡意，我们就扼杀了记忆优化。如果我们消除了无聊感，我们就接受了不加选择的学习。如果我们消除遗忘，我们就扼杀了抽象思维，等等。
+
 Moreover, all the push for bad sleep and bad learning would result in an epidemic of Alzheimer's disease. The garbage leftovers of excessive brainwork usually hit beyond the breeding age. This keeps senile dementia well protected from the reach of the evolution. Instead of having smarter students, we would have adults who would forget their own name by the time they were of my age.
+
+此外，所有对睡眠不良和学习不良的推动都会导致阿尔茨海默氏症的流行。过度脑力劳动所产生的垃圾通常会在生育年龄后造成严重影响。这使得老年痴呆不受进化的影响。我们不会有更聪明的学生，我们会有成年人在他们像我这么大的时候忘记自己的名字。
 
 ## 13.3 Breeding perfect students
 
+## 培育完美学生
+
 It is a dream of every teacher to have an obedient, focused, and refreshed student who comes to school in time. Unfortunately, that dream is often realized with harmful means. Alarm clock ensures good timing. Modafinil improves alertness. Ritalin improves focus. Legal amphetamine, Adderall, improves both. [Learned helplessness](https://supermemo.guru/wiki/Learned_helplessness) leads to obedience. Instead of raising creative individuals, with this approach, we are raising intellectual zombies.
+
+有一个听话、专注、精神抖擞、按时到校的学生是每一位老师的梦想。不幸的是，这种梦想往往是通过有害的手段实现的。闹钟确保时间准确。莫达非尼提高警觉性。利他林提高专注。合法的安非他命改善了这两方面。[习得性无助](https://supermemo.guru/wiki/Learned_helplessness)导致服从。用这种方法，我们培养的不是有创造力的个体，而是智力僵尸。
 
 Coercive education is supposed to make sure kids tolerate boredom in order to withstand the hardships of learning. Teen suicide would be a form of natural selection of those who did not adapt to "modern lifestyle". Supposedly, the next generation is to get more resilient. Unfortunately, the opposite is true. If we tolerate boredom, frustration, and suppress the distractive [learn drive](https://supermemo.guru/wiki/Learn_drive), we eliminate the natural inflow of coherent knowledge, and replace it with indiscriminate inflow of knowledge that does not fit the semantic network status quo. This would naturally accelerate forgetting, which might perhaps be slowed down with drugs. One day this will inevitably spark a saying: *"he is a great student, he knows a lot, but he is as dumb as a hard disk"*.
 
-Sleepiness and the sense of boredom are fantastic weapons against brain mismanagement. If we eliminate these, we expose the brain to the damage of bad sleep and bad learning.
+强制教育的目的是为了让孩子们忍受学习的艰辛而忍受无聊。青少年自杀是那些不适应「现代生活方式」的人的一种自然选择。据推测，下一代人将变得更有韧性。不幸的是，事实正好相反。如果我们容忍无聊、挫折，抑制令人分心的[学习内驱力](https://supermemo.guru/wiki/Learn_drive)，我们就消除了连贯知识的自然流入，取而代之的是不符合语义网络现状的不加区分的知识流入。这自然会加速遗忘，而遗忘也许可以通过药物来减缓。有一天，这将不可避免地产生一句谚语：「他是一个伟大的学生，他知道很多，但他像硬盘一样笨」。
+
+> Sleepiness and the sense of boredom are fantastic weapons against brain mismanagement. If we eliminate these, we expose the brain to the damage of bad sleep and bad learning.
+>
+> 困倦和无聊感是对付大脑管理不善的神奇武器。如果我们消除了这些，我们的大脑就会受到睡眠不良和学习不良的损害。
 
 Due to the marvelous diversification of student interests, joy of learning is a frequent source of distraction in a classroom. While the teacher might be ready to explain the structure of the atom, the kid is more likely to think about that new cool [videogame](https://supermemo.guru/wiki/Videogame). To eliminate that distraction we need to eliminate the [learn drive](https://supermemo.guru/wiki/Learn_drive) (the attractive force) and creativity (the distractive force). Ritalin does a great job here. It makes sure that passions do not interfere with schooling.
 
+由于学生兴趣的惊人多样化，学习的乐趣是课堂上经常分心的原因。虽然老师可能已经准备好解释原子的结构，但孩子更有可能想到那个新的很酷的[电子游戏](https://supermemo.guru/wiki/Videogame)。为了消除这种干扰，我们需要消除学习内驱力（吸引力）和创造力（分心力）。利他林在这方面做得很好。它确保激情不会干扰学业。
+
 Enjoying videogames, TV shows, or the need to spend 7 hours per day on sleep are just side effects of genius inventions of neural evolution. Those great evolutionary spoils cannot be overturned. They are also hard to improve upon in computational sense. They are an acme of millions of years of evolution. **Pushing the brain to the limits is like trying to improve bird flight by loading birds with weights that make flight impossible**.
+
+享受电子游戏、电视节目，或者每天需要花 7 个小时睡觉，这些都只是神经进化的天才发明的副作用。这些伟大的进化带来的好处是无法推翻的。它们在计算上也很难改进。它们是数百万年进化的顶点。**把大脑推到极限就像给鸟类负重，让它们无法飞行，以此来提高它们的飞行能力。**
 
 I wrote elsewhere that [resistance to chronic stress is not trainable](https://supermemo.guru/wiki/Stress_resilience). By pushing the limits early, we may induce brain adaptations that are shortcuts in development, but bring negative long-term outcomes. Daycare acceleration is the best example of pushing the limits that might spark evolution in the reverse, i.e. dumbing up future generations. Those kids who adapt best to the regimen early, e.g. for hormonal reasons, will be well equipped to freeze brain development at early stages. If we push the maladapted kids to suicide or non-reproduction, we get the exact opposite to the effect intended. In the extreme, we might even start pushing newborns to new heights of learning. Those stressed puppies might never get beyond the level of a well trained dog.
 
+我在其他地方写道，[适应慢性压力](https://supermemo.guru/wiki/Stress_resilience)是无法训练的。通过早期突破极限，我们可能会诱导大脑适应，这是发展的捷径，但会带来负面的长期结果。幼儿园加速是推动极限的最好例子，这种推动极限可能会引发相反的进化，也就是让后代变得更笨。那些早期最能适应这种疗法的孩子，比如因为荷尔蒙的原因，在早期阶段就能很好地冻结大脑的发育。如果我们强迫不适应的孩子自杀或不生育，我们会得到完全相反的效果。在极端情况下，我们甚至可能开始把新生儿推向新的学习高峰。那些压力过大的幼犬可能永远无法达到训练有素的狗的水平。
+
 Those who dream of turning brains into computers should be aware that soon the opposite will happen. Computers will mimic brains, and in the end, they will outsmart the smartest of us. Those future computers, as envisaged by [Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins) and others, will borrow richly from the wisdom of evolution instead of trying to override it.
+
+那些梦想把大脑变成电脑的人应该意识到，很快就会发生相反的事情。电脑会模仿大脑，最终，它们会比我们当中最聪明的人更聪明。[Jeff Hawkins](https://en.wikipedia.org/wiki/Jeff_Hawkins) 等人设想的未来计算机，将充分借鉴进化的智慧，而不是试图推翻它。
 
 ## 13.4 Eugenics
 
+## 优生学
+
 By definition, [eugenics](https://en.wikipedia.org/wiki/Eugenics) is a good thing. Its a quest to improve the genetic make up of humanity. It may involve eliminating some lethal genetic disorders. Eugenics was given a bad name by Hitler, the Nazis, and others. That Nazi variant could be called a *"hate optimization"*. Instead of improving the gene pool, it was to be made supposedly better but keeping it monoracial. Races are a treasure. They enrich the human gene pool, incl. the pool of genes responsible for multiple intelligences.
+
+根据定义，[优生学](https://en.wikipedia.org/wiki/Eugenics)是一件好事。这是一项改善人类基因构成的探索。它可能包括消除一些致命的遗传疾病。优生学被希特勒、纳粹和其他一些人冠以恶名。纳粹的变种可以被称为「仇恨优化」。不是改善基因库，而是应该使其变得更好，但要保持其单一性。种族是一种财富。它们丰富了人类的基因库，包括负责多元智能的基因库。
 
 We are all guilty of good eugenics. When we choose a mate or spouse we usually go for healthy, nice, and smart. We also go for beautiful, which is an approximate surrogate for measuring good health. In that act of choice, we commit eugenics. The main problem with artificial eugenics is that, in wrong hands, instead of producing future smarter generations we might end up with a tabloid genome whose quality would not differ from the quality of discussions on most Internet fora.
 
+我们都是优生学的罪人。当我们选择伴侣时，我们通常选择健康、友善和聪明的。我们也追求美丽，这是衡量健康的近似替代品。在选择的过程中，我们进行优生学。人工优生学的主要问题在于，如果掌握在错误的人手中，我们可能不会培养出未来更聪明的后代，而是得到一个八卦小报式的基因组，其质量与大多数互联网论坛上讨论的质量没有什么不同。
+
 Today, our reproductive choices are subject to the [Idiocracy problem](https://supermemo.guru/wiki/Idiocracy_problem). Smart people are less likely to reproduce early. This way they commit dysgenics instead. The problem of late reproduction or non-reproduction is particularly rampant among productivity freaks (like myself). Flynn effect seems to suggest that we are on the right path, however, if we want to prevent dysgenics, we should rather solve the problem of the evolutionary disadvantage of smart brains. Cranking up school pressure might have the opposite effect again.
+
+今天，我们的生育选择受制于[愚蠢的问题](https://supermemo.guru/wiki/Idiocracy_problem)。聪明的人不太可能早生育。这样他们就会出现基因异常。晚育或不生育的问题在生产力怪胎（我自己）中尤其泛滥。弗林效应似乎表明，我们正走在正确的道路上，然而，如果我们想要防止基因异常，我们更应该解决聪明大脑进化劣势的问题。加大学校压力可能会再次产生相反的效果。
 
 For the evolution to work, we need to employ the right selection criteria. The pressures of modern life provide wrong criteria. Imagine a Nazi-like scenario in which, to foster smart and precocious brains, we prevent reproduction of kids who speak late. For starters, Einstein would be in front of the queue for the chopping block. If we reward early speech, we promote speedy freeze on brain function and short reproductive cycles. We might end up with fruit fly babies ready to crawl from mama's womb to generate parrot-like speech. It is the exact opposite of what humanity is. We want prolonged and rich brain growth. It takes decades to bring that organ to true heights of genius.
 
+为了让进化发挥作用，我们需要使用正确的选择标准。现代生活的压力提供了错误的标准。想象一个纳粹式的场景，为了培养聪明和早熟的大脑，我们阻止了晚说话的孩子的生育。首先，爱因斯坦会排在砧板前面。如果我们奖励早期说话的人，我们就能促进大脑功能的快速冻结和生殖周期的缩短。我们可能会有果蝇宝宝准备从妈妈的子宫里爬出来，产生鹦鹉学舌的言语能力。这与人性是完全相反的。我们想要延长和丰富的大脑生长。要花上几十年的时间才能使这个器官达到真正的天才水平。
+
 Selecting for early speech would be an example of dysgenics. We might opt for selecting for bigger brains instead. This would not interfere with neural computing and might provide more brain tissue to run the computation. However, size would not necessarily guarantee better brains. Size isn't necessarily the bottleneck of human brain computational power. Availability of time for learning, thinking and creativity seems far more limiting. Instead of smarter generations, we might be like [chihuahuas](https://en.wikipedia.org/wiki/Chihuahua_(dog)), requiring C-section to guarantee healthy delivery. Instead of smarter humans, we would wave goodbye to natural birth in the lap of nature.
+
+选择早期语言能力将是劣生学的一个例子。我们可能会选择更大的大脑。这将不会干扰神经计算，并可能提供更多的脑组织运行计算。然而，尺寸并不一定保证大脑更好。大小并不一定是人脑计算能力的瓶颈。学习、思考和创造力的时间似乎更有限。我们可能会像[吉娃娃狗](https://en.wikipedia.org/wiki/Chihuahua_(dog))一样，需要剖腹产来保证健康分娩，而不是聪明的一代。我们将告别自然的诞生，而不是更聪明的人类。
 
 The right approach to brain eugenics might be to select for excellent opus vitae. We might, for example, go for a [Genius Sperm Bank](https://en.wikipedia.org/wiki/Repository_for_Germinal_Choice), and pay women to conceive and deliver babies using sperm from the bank. Even then, however, we cannot discount the nurture factor. Instead of a genius generation, we might breed more cases of [Ted Kaczynski](https://en.wikipedia.org/wiki/Ted_Kaczynski). It seems classical mating and old-fashioned families still come on top in breeding best brains. Instead of "pushing the limits", we should respect the rules of a healthy lifestyle and a healthy brainwork.
 
-**Pushing the brain to its limits does not benefit the evolution of the brain. It may exert an evolutionary pressure opposite to the one intended**
+大脑优生学的正确方法可能是选择优生优育。例如，我们可以找一家[天才精子库](https://en.wikipedia.org/wiki/Repository_for_Germinal_Choice)，付钱给妇女，让她们用精子库的精子怀孕和分娩。然而，即便如此，我们也不能忽视养育因素。我们可能会培养更多的 [Ted Kaczynski](https://en.wikipedia.org/wiki/Ted_Kaczynski) 这样的人，而不是天才一代。传统的交配和传统的家庭似乎仍然在培养最优秀的大脑方面处于领先地位。我们应该尊重健康生活方式和脑力劳动的规则，而不是「挑战极限」。
+
+> **Pushing the brain to its limits does not benefit the evolution of the brain. It may exert an evolutionary pressure opposite to the one intended**
+>
+> **把大脑逼到极限不利于大脑的进化。它可能会产生与预期相反的进化压力**
 
 ## 13.5 Summary: Brain evolution
 
+## 摘要：脑进化
+
 - [learn drive](https://supermemo.guru/wiki/Learn_drive) and the [natural creativity cycle](https://supermemo.guru/wiki/Natural_creativity_cycle) are marvels of the evolution that are hard to improve upon
+- [学习内驱力](https://supermemo.guru/wiki/Learn_drive)和[自然创造力周期](https://supermemo.guru/wiki/Natural_creativity_cycle)是进化的奇迹，难以改进
 - sleepiness and boredom are defense weapons that protect the brain
+- 困倦和无聊是保护大脑的防御性武器
 - evolution of the brain is too slow to benefit mankind much nowadays
+- 如今，大脑的进化太慢了，不能给人类带来太多好处
 - respecting the needs of the brain can bring dramatic returns in intellectual productivity
+- 尊重大脑的需求可以在智力生产力方面带来巨大的回报
 - early intervention and acceleration in child care may result in stress and worse long-term outcomes
+- 儿童保育的早期干预和加速可能导致压力和更糟的长期结果
 - pushing the brain to the limits does not benefit the evolution of the brain
+- 把大脑推向极限不利于大脑的进化
