--- a/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
+++ b/I would never send my kids to school我再也不会把孩子送去学校/00.Content目录.md
@@ -23,7 +23,7 @@
   - [1.11Learning skill impotence](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Learning_skill_impotence)
   - [学习能力的丧失](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%AD%A6%E4%B9%A0%E8%83%BD%E5%8A%9B%E4%B8%A7%E5%A4%B1)
   - [1.12Grand Education Reform](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Grand_Education_Reform)
-  - [宏大的教育改革](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%AE%8F%E5%A4%A7%E7%9A%84%E6%95%99%E8%82%B2%E6%94%B9%E9%9D%A9)
+  - [教育大改革](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/01.Introduction%E5%89%8D%E8%A8%80.md#%E5%AE%8F%E5%A4%A7%E7%9A%84%E6%95%99%E8%82%B2%E6%94%B9%E9%9D%A9)
   - [1.13When school is a blessing](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#When_school_is_a_blessing)
   - [何时学校的一种眷顾](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/01.Introduction%E5%89%8D%E8%A8%80.md#%E4%BD%95%E6%97%B6%E5%AD%A6%E6%A0%A1%E6%98%AF%E4%B8%80%E7%A7%8D%E7%9C%B7%E9%A1%BE)
   - [1.14The Optimization Error](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#The_Optimization_Error)
@@ -47,7 +47,7 @@
   - [4.3Novelty and stress](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Novelty_and_stress)
   - [新奇和压力](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.md#%E6%96%B0%E5%A5%87%E5%92%8C%E5%8E%8B%E5%8A%9B)
   - [4.4Suppression of the learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Suppression_of_the_learn_drive)
-  - [学习驱力的抑制因素](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.md#%E5%AD%A6%E4%B9%A0%E9%A9%B1%E5%8A%9B%E7%9A%84%E6%8A%91%E5%88%B6%E5%9B%A0%E7%B4%A0)
+  - [学习内驱力的抑制因素](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.md#%E5%AD%A6%E4%B9%A0%E9%A9%B1%E5%8A%9B%E7%9A%84%E6%8A%91%E5%88%B6%E5%9B%A0%E7%B4%A0)
   - [4.5Further reading](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Further_reading)
   - [拓展阅读](https://github.com/L-M-Sherlock/supermemo.guru-cn/blob/master/I%20would%20never%20send%20my%20kids%20to%20school%E6%88%91%E5%86%8D%E4%B9%9F%E4%B8%8D%E4%BC%9A%E6%8A%8A%E5%AD%A9%E5%AD%90%E9%80%81%E5%8E%BB%E5%AD%A6%E6%A0%A1/04.Learn%20drive%E5%AD%A6%E4%B9%A0%E5%86%85%E9%A9%B1%E5%8A%9B.md#%E6%8B%93%E5%B1%95%E9%98%85%E8%AF%BB)
   - [4.6Summary: Learn drive](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Summary:_Learn_drive)
@@ -247,7 +247,7 @@
   - [9.1Hate of school](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Hate_of_school)
   - 讨厌学校
   - [9.2What are toxic memories?](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#What_are_toxic_memories.3F)
-  - 什么是毒性记忆
+  - 什么是毒性记忆？
   - [9.3Toxic memory: mechanism](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#Toxic_memory:_mechanism)
   - 毒性记忆：机制
   - [9.4School: an unhappy institution](https://supermemo.guru/wiki/I_would_never_send_my_kids_to_school#School:_an_unhappy_institution)
